[gd_scene load_steps=6 format=2]

[ext_resource path="res://demo/demoChart.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.603922, 0.831373, 1 )

[sub_resource type="StyleBoxFlat" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.380392, 0.764706, 0.105882, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.721569, 0.168627, 0.337255, 1 )

[node name="demoChart" type="Node2D"]
script = ExtResource( 1 )

[node name="demo1" type="ProgressBar" parent="."]
margin_right = 59.0
margin_bottom = 19.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 25.0
value = 15.0
percent_visible = false

[node name="Label1" type="Label" parent="demo1"]
margin_left = 21.94
margin_top = 2.0
margin_right = 36.94
margin_bottom = 16.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "15"
align = 1
valign = 1

[node name="demo2" type="ProgressBar" parent="."]
margin_top = 19.2712
margin_right = 59.0
margin_bottom = 38.2712
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 2 )
max_value = 25.0
value = 10.0
percent_visible = false

[node name="Label2" type="Label" parent="demo2"]
margin_left = 21.94
margin_top = 2.94401
margin_right = 37.94
margin_bottom = 16.944
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 1
valign = 1

[node name="demo3" type="ProgressBar" parent="."]
margin_top = 38.4883
margin_right = 59.0
margin_bottom = 57.4883
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 2 )
max_value = 25.0
value = 6.0
percent_visible = false

[node name="Label3" type="Label" parent="demo3"]
margin_left = 21.94
margin_top = 1.80172
margin_right = 37.94
margin_bottom = 15.8017
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6"
align = 1
valign = 1

